# vibejam3

./: .gitignore  AGENTS.md  CRUSH-action-log.md  CRUSH-decision-log.md  agent-hardening-log.md  agent-longtask-state.md  agent-plan-progress.md  agent-project-context.md  agent-session-bootstrap.md  agent-test-log.md  crush.json  game_guide_production_system_spec.md  index.html  package-lock.json  package.json  tsconfig.json
.github/instructions/: implementation-workflow.instructions.md  skill-enforcement.instructions.md
COPILOT-PRD-vibe1/: 01-project-brief.md  02-requirements.md  03-constraints-and-assumptions.md  04-user-experience-spec.md  05-technical-architecture.md  06-system-component-map.md  07-data-model-and-schema-definitions.md  08-storage-and-infrastructure-strategy.md  09-api-and-integration-contracts.md  10-provider-abstraction-design.md  11-prompt-orchestration-design.md  12-consistency-validation-plan.md  13-asset-rights-and-policy-enforcement.md  14-ux-flow-and-state-model.md  15-tech-evaluation.md  16-milestone-plan.md  17-risk-register.md  18-test-strategy.md  19-acceptance-criteria-matrix.md  20-open-questions.md  21-inference-ledger.md  22-devils-advocate-review.md  README.md
docs/design/: ui-ux-design-spec.md
docs/migration/: migration-plan.md
docs/stub-audit/: stub-findings.md
qt/: CMakeLists.txt
qt/src/: blueprint_dialog.cpp  blueprint_dialog.hpp  build_bundle_review_dialog.cpp  build_bundle_review_dialog.hpp  knowledge_workbench_dialog.cpp  knowledge_workbench_dialog.hpp  main.cpp  main_window.cpp  main_window.hpp  new_project_dialog.cpp  new_project_dialog.hpp  preview_review_dialog.cpp  preview_review_dialog.hpp  project.hpp  project_repository.cpp  project_repository.hpp
qt/tests/: project_repository_test.cpp
src/: App.tsx  styles.css
src/domain/: index.ts
src/orchestration/: full-build-factory.ts  index.ts  preview-package-factory.ts  project-full-build.test.ts  (+4 more)
(+25 files in other folders)
